# TPL-Compiler

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
cmake/: CompileOptions.cmake
example/: minarray.c  nod.c  strstr.c
src/: CMakeLists.txt
src/ci-parser/: CMakeLists.txt
src/ci-parser/ci-parser/: main.cpp
src/grammar/: CMakeLists.txt  CiLexer.g4  JsonLexer.g4
src/json-parser/json-parser/: main.cpp
src/libci/: CMakeLists.txt
src/libci/libci/: dump_tokens.cpp
src/libci/test/: lexer.cpp
src/libjson/libjson/: dump_tokens.cpp  dump_tokens.hpp
src/libjson/test/: lexer.cpp
